@@ -25,7 +25,6 @@ import java.io.UncheckedIOException;
 import java.math.BigDecimal;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -144,7 +143,7 @@ public abstract class BaseDataBlock implements DataBlock {
 
   @Override
   public Map<String, String> getMetadata() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 
   @Nullable
@@ -289,6 +288,26 @@ public abstract class BaseDataBlock implements DataBlock {
   }
 
   @Override
+  public BigDecimal[] getBigDecimalArray(int rowId, int colId) {
+    int offsetInFixed = getOffsetInFixedBuffer(rowId, colId);
+    int size = _fixedSizeData.getInt(offsetInFixed + 4);
+    int offsetInVar = _fixedSizeData.getInt(offsetInFixed);
+
+    BigDecimal[] bigDecimals = new BigDecimal[size];
+    try (PinotInputStream stream = _variableSizeData.openInputStream(offsetInVar)) {
+      for (int i = 0; i < size; i++) {
+        int byteLength = stream.readInt();
+        byte[] bytes = new byte[byteLength];
+        stream.readFully(bytes);
+        bigDecimals[i] = BigDecimalUtils.deserialize(bytes);
+      }
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
+    return bigDecimals;
+  }
+
+  @Override
   public String[] getStringArray(int rowId, int colId) {
     int offsetInFixed = getOffsetInFixedBuffer(rowId, colId);
     int size = _fixedSizeData.getInt(offsetInFixed + 4);
@@ -303,6 +322,26 @@ public abstract class BaseDataBlock implements DataBlock {
       throw new UncheckedIOException(e);
     }
     return strings;
+  }
+
+  @Override
+  public ByteArray[] getBytesArray(int rowId, int colId) {
+    int offsetInFixed = getOffsetInFixedBuffer(rowId, colId);
+    int size = _fixedSizeData.getInt(offsetInFixed + 4);
+    int offsetInVar = _fixedSizeData.getInt(offsetInFixed);
+
+    ByteArray[] bytes = new ByteArray[size];
+    try (PinotInputStream stream = _variableSizeData.openInputStream(offsetInVar)) {
+      for (int i = 0; i < size; i++) {
+        int byteLength = stream.readInt();
+        byte[] value = new byte[byteLength];
+        stream.readFully(value);
+        bytes[i] = new ByteArray(value);
+      }
+    } catch (IOException e) {
+      throw new UncheckedIOException(e);
+    }
+    return bytes;
   }
 
   @Override
@@ -445,6 +484,6 @@ public abstract class BaseDataBlock implements DataBlock {
   @Nullable
   @Override
   public List<DataBuffer> getStatsByStage() {
-    return Collections.emptyList();
+    return List.of();
   }
 }
