@@ -106,6 +106,38 @@ public class JsonFunctions {
   }
 
   /**
+   * Returns {@code false} when the input is known to be non-extractable by a json path without invoking the JSON
+   * parser: a {@code null} value, or a string whose first non-whitespace character cannot begin a JSON value. Used
+   * by the default-value {@code jsonPath*} overloads to skip parsing plain-text input (e.g. raw log lines) that
+   * would otherwise throw a {@link com.jayway.jsonpath.InvalidJsonException} whose {@code fillInStackTrace()}
+   * dominates the hot ingestion path. It is intentionally conservative: any string that could begin a JSON value
+   * (object, array, string, number, or a {@code true}/{@code false}/{@code null} literal) is still handed to the
+   * parser, so the parser's behavior - including any exception it raises - is unchanged for those inputs. Returning
+   * the caller's default for the skipped inputs is equivalent to the prior behavior, where the parse exception was
+   * caught and the default returned.
+   */
+  private static boolean canExtractJsonPath(@Nullable Object object) {
+    if (object == null) {
+      return false;
+    }
+    if (!(object instanceof String)) {
+      // Already-parsed Map/List/etc. - handled by jsonPath() directly without re-parsing.
+      return true;
+    }
+    String s = (String) object;
+    for (int i = 0, n = s.length(); i < n; i++) {
+      char c = s.charAt(i);
+      if (c == ' ' || c == '\t' || c == '\n' || c == '\r') {
+        continue;
+      }
+      // First non-whitespace character of any valid JSON value.
+      return c == '{' || c == '[' || c == '"' || c == '-' || (c >= '0' && c <= '9') || c == 't' || c == 'f'
+          || c == 'n';
+    }
+    return false; // empty / all-whitespace is not valid JSON
+  }
+
+  /**
    * Extract object array based on Json path
    */
   @Nullable
@@ -119,8 +151,11 @@ public class JsonFunctions {
 
   @ScalarFunction(nullableParameters = true)
   public static Object[] jsonPathArrayDefaultEmpty(@Nullable Object object, String jsonPath) {
+    if (!canExtractJsonPath(object)) {
+      return EMPTY;
+    }
     try {
-      Object[] result = object == null ? null : jsonPathArray(object, jsonPath);
+      Object[] result = jsonPathArray(object, jsonPath);
       return result == null ? EMPTY : result;
     } catch (Exception e) {
       return EMPTY;
@@ -172,6 +207,9 @@ public class JsonFunctions {
    */
   @ScalarFunction(nullableParameters = true)
   public static String jsonPathString(@Nullable Object object, String jsonPath, String defaultValue) {
+    if (!canExtractJsonPath(object)) {
+      return defaultValue;
+    }
     try {
       Object jsonValue = jsonPath(object, jsonPath);
       if (jsonValue instanceof String) {
@@ -196,6 +234,9 @@ public class JsonFunctions {
    */
   @ScalarFunction(nullableParameters = true)
   public static long jsonPathLong(@Nullable Object object, String jsonPath, long defaultValue) {
+    if (!canExtractJsonPath(object)) {
+      return defaultValue;
+    }
     try {
       Object jsonValue = jsonPath(object, jsonPath);
       if (jsonValue == null) {
@@ -223,6 +264,9 @@ public class JsonFunctions {
    */
   @ScalarFunction(nullableParameters = true)
   public static double jsonPathDouble(@Nullable Object object, String jsonPath, double defaultValue) {
+    if (!canExtractJsonPath(object)) {
+      return defaultValue;
+    }
     try {
       Object jsonValue = jsonPath(object, jsonPath);
       if (jsonValue == null) {
@@ -323,6 +367,33 @@ public class JsonFunctions {
     return null;
   }
 
+  /**
+   * Parse a JSON document into a reusable {@code Map}/{@code List}, or pass through an already-parsed container,
+   * returning {@code null} for null, scalar, or non-JSON input <b>without throwing</b>.
+   * <p>Intended for "parse-once" ingestion transforms: materialize an intermediate object column once and point
+   * multiple {@code jsonPath*} extractions at it, instead of re-parsing the same source document for every extracted
+   * field. {@link #jsonPath} navigates the returned object directly (no re-parse), and because this never throws it
+   * is safe for columns that are sometimes structured JSON and sometimes plain text (e.g. a log {@code message}
+   * field) - the plain-text rows simply yield {@code null} and fall through to the default of the downstream
+   * extraction. Example transform configs:
+   * <pre>
+   *   {"columnName": "message_obj", "transformFunction": "jsonExtractObject(message)"}
+   *   {"columnName": "level",       "transformFunction": "JSONPATHSTRING(message_obj, '$.level', null)"}
+   * </pre>
+   */
+  @Nullable
+  @ScalarFunction(nullableParameters = true)
+  public static Object jsonExtractObject(@Nullable Object object) {
+    if (object instanceof String) {
+      return jsonStringToListOrMap((String) object);
+    }
+    if (object instanceof Map || object instanceof List || object instanceof Object[]) {
+      // Already parsed (e.g. a nested object surfaced by the decoder or an upstream transform) - reuse as-is.
+      return object;
+    }
+    return null;
+  }
+
   private static void setValuesToMap(String keyColumnName, String valueColumnName, Object obj,
       Map<String, String> result) {
     if (obj instanceof Map) {
@@ -374,7 +445,7 @@ public class JsonFunctions {
     JsonExtractFunctionParameters params = new JsonExtractFunctionParameters(paramString);
 
     if (params._maxDepth == 0) {
-      return java.util.Collections.emptyList();
+      return java.util.List.of();
     }
     // Special handling for empty string, '$.**' and '$..' recursive key extraction
     if ("".equals(jsonPath) || "$..**".equals(jsonPath) || "$..".equals(jsonPath)) {
