@@ -20,9 +20,8 @@ package org.apache.pinot.core.data.function;
 
 import com.google.common.collect.Lists;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import org.apache.pinot.segment.local.function.InbuiltFunctionEvaluator;
+import org.apache.pinot.common.evaluator.InbuiltFunctionEvaluator;
 import org.apache.pinot.spi.data.readers.GenericRow;
 import org.testng.Assert;
 import org.testng.annotations.DataProvider;
@@ -54,105 +53,109 @@ public class ArrayFunctionsTest {
     GenericRow row = new GenericRow();
     row.putValue("intArray", new int[]{3, 2, 10, 6, 1, 12});
     row.putValue("integerArray", new Integer[]{3, 2, 10, 6, 1, 12});
+    row.putValue("longArray", new long[]{3L, 2L, 10L, 6L, 1L, 12L});
     row.putValue("stringArray", new String[]{"3", "2", "10", "6", "1", "12"});
     row.putValue("stringArrayWithNulls", new String[]{"3", "2", "10", "6", "1", "12", "", null});
 
     inputs.add(new Object[]{
-        "array_reverse_int(intArray)", Collections.singletonList("intArray"), row, new int[]{12, 1, 6, 10, 2, 3}
+        "array_reverse_int(intArray)", List.of("intArray"), row, new int[]{12, 1, 6, 10, 2, 3}
     });
     inputs.add(new Object[]{
-        "array_reverse_int(integerArray)", Collections.singletonList("integerArray"), row, new int[]{12, 1, 6, 10, 2, 3}
+        "array_reverse_int(integerArray)", List.of("integerArray"), row, new int[]{12, 1, 6, 10, 2, 3}
     });
     inputs.add(new Object[]{
-        "array_reverse_int(stringArray)", Collections.singletonList("stringArray"), row, new int[]{12, 1, 6, 10, 2, 3}
+        "array_reverse_int(stringArray)", List.of("stringArray"), row, new int[]{12, 1, 6, 10, 2, 3}
     });
 
     inputs.add(new Object[]{
-        "array_reverse_string(intArray)", Collections.singletonList("intArray"), row,
+        "array_reverse_string(intArray)", List.of("intArray"), row,
         new String[]{"12", "1", "6", "10", "2", "3"}
     });
     inputs.add(new Object[]{
-        "array_reverse_string(integerArray)", Collections.singletonList("integerArray"), row,
+        "array_reverse_string(integerArray)", List.of("integerArray"), row,
         new String[]{"12", "1", "6", "10", "2", "3"}
     });
     inputs.add(new Object[]{
-        "array_reverse_string(stringArray)", Collections.singletonList("stringArray"), row,
+        "array_reverse_string(stringArray)", List.of("stringArray"), row,
         new String[]{"12", "1", "6", "10", "2", "3"}
     });
 
     inputs.add(new Object[]{
-        "array_sort_int(intArray)", Collections.singletonList("intArray"), row, new int[]{1, 2, 3, 6, 10, 12}
+        "array_sort_int(intArray)", List.of("intArray"), row, new int[]{1, 2, 3, 6, 10, 12}
     });
     inputs.add(new Object[]{
-        "array_sort_int(integerArray)", Collections.singletonList("integerArray"), row, new int[]{1, 2, 3, 6, 10, 12}
+        "array_sort_int(integerArray)", List.of("integerArray"), row, new int[]{1, 2, 3, 6, 10, 12}
     });
     inputs.add(new Object[]{
-        "array_sort_int(stringArray)", Collections.singletonList("stringArray"), row, new int[]{1, 2, 3, 6, 10, 12}
+        "array_sort_int(stringArray)", List.of("stringArray"), row, new int[]{1, 2, 3, 6, 10, 12}
     });
 
     inputs.add(new Object[]{
-        "array_sort_string(intArray)", Collections.singletonList("intArray"), row,
+        "array_sort_string(intArray)", List.of("intArray"), row,
         new String[]{"1", "10", "12", "2", "3", "6"}
     });
     inputs.add(new Object[]{
-        "array_sort_string(integerArray)", Collections.singletonList("integerArray"), row,
+        "array_sort_string(integerArray)", List.of("integerArray"), row,
         new String[]{"1", "10", "12", "2", "3", "6"}
     });
     inputs.add(new Object[]{
-        "array_sort_string(stringArray)", Collections.singletonList("stringArray"), row,
+        "array_sort_string(stringArray)", List.of("stringArray"), row,
         new String[]{"1", "10", "12", "2", "3", "6"}
     });
 
-    inputs.add(new Object[]{"array_index_of_int(intArray, 2)", Collections.singletonList("intArray"), row, 1});
-    inputs.add(new Object[]{"array_index_of_int(integerArray, 2)", Collections.singletonList("integerArray"), row, 1});
-    inputs.add(new Object[]{"array_index_of_int(stringArray, 2)", Collections.singletonList("stringArray"), row, 1});
+    inputs.add(new Object[]{"array_index_of_int(intArray, 2)", List.of("intArray"), row, 1});
+    inputs.add(new Object[]{"array_index_of_int(integerArray, 2)", List.of("integerArray"), row, 1});
+    inputs.add(new Object[]{"array_index_of_int(stringArray, 2)", List.of("stringArray"), row, 1});
 
-    inputs.add(new Object[]{"array_index_of_string(intArray, '2')", Collections.singletonList("intArray"), row, 1});
+    inputs.add(new Object[]{"array_index_of_string(intArray, '2')", List.of("intArray"), row, 1});
     inputs.add(
-        new Object[]{"array_index_of_string(integerArray, '2')", Collections.singletonList("integerArray"), row, 1});
+        new Object[]{"array_index_of_string(integerArray, '2')", List.of("integerArray"), row, 1});
     inputs
-        .add(new Object[]{"array_index_of_string(stringArray, '2')", Collections.singletonList("stringArray"), row, 1});
+        .add(new Object[]{"array_index_of_string(stringArray, '2')", List.of("stringArray"), row, 1});
 
-    inputs.add(new Object[]{"array_contains_int(intArray, 2)", Collections.singletonList("intArray"), row, true});
+    inputs.add(new Object[]{"array_contains_int(intArray, 2)", List.of("intArray"), row, true});
     inputs
-        .add(new Object[]{"array_contains_int(integerArray, 2)", Collections.singletonList("integerArray"), row, true});
-    inputs.add(new Object[]{"array_contains_int(stringArray, 2)", Collections.singletonList("stringArray"), row, true});
+        .add(new Object[]{"array_contains_int(integerArray, 2)", List.of("integerArray"), row, true});
+    inputs.add(new Object[]{"array_contains_int(stringArray, 2)", List.of("stringArray"), row, true});
 
-    inputs.add(new Object[]{"array_contains_string(intArray, '2')", Collections.singletonList("intArray"), row, true});
+    inputs.add(new Object[]{"array_contains_string(intArray, '2')", List.of("intArray"), row, true});
     inputs.add(
-        new Object[]{"array_contains_string(integerArray, '2')", Collections.singletonList("integerArray"), row, true});
+        new Object[]{"array_contains_string(integerArray, '2')", List.of("integerArray"), row, true});
     inputs.add(
-        new Object[]{"array_contains_string(stringArray, '2')", Collections.singletonList("stringArray"), row, true});
+        new Object[]{"array_contains_string(stringArray, '2')", List.of("stringArray"), row, true});
 
     inputs
-        .add(new Object[]{"array_slice_int(intArray, 1, 2)", Collections.singletonList("intArray"), row, new int[]{2}});
+        .add(new Object[]{"array_slice_int(intArray, 1, 2)", List.of("intArray"), row, new int[]{2}});
     inputs.add(new Object[]{
-        "array_slice_int(integerArray, 1, 2)", Collections.singletonList("integerArray"), row, new int[]{2}
+        "array_slice_int(integerArray, 1, 2)", List.of("integerArray"), row, new int[]{2}
     });
     inputs.add(new Object[]{
-        "array_slice_string(stringArray, 1, 2)", Collections.singletonList("stringArray"), row, new String[]{"2"}
+        "array_slice_long(longArray, 1, 3)", List.of("longArray"), row, new long[]{2L, 10L}
+    });
+    inputs.add(new Object[]{
+        "array_slice_string(stringArray, 1, 2)", List.of("stringArray"), row, new String[]{"2"}
     });
 
     inputs.add(new Object[]{
-        "array_distinct_int(intArray)", Collections.singletonList("intArray"), row, new int[]{3, 2, 10, 6, 1, 12}
+        "array_distinct_int(intArray)", List.of("intArray"), row, new int[]{3, 2, 10, 6, 1, 12}
     });
     inputs.add(new Object[]{
-        "array_distinct_int(integerArray)", Collections.singletonList("integerArray"), row,
+        "array_distinct_int(integerArray)", List.of("integerArray"), row,
         new int[]{3, 2, 10, 6, 1, 12}
     });
     inputs.add(new Object[]{
-        "array_distinct_string(stringArray)", Collections.singletonList("stringArray"), row,
+        "array_distinct_string(stringArray)", List.of("stringArray"), row,
         new String[]{"3", "2", "10", "6", "1", "12"}
     });
 
     inputs.add(new Object[]{
-        "array_remove_int(intArray, 2)", Collections.singletonList("intArray"), row, new int[]{3, 10, 6, 1, 12}
+        "array_remove_int(intArray, 2)", List.of("intArray"), row, new int[]{3, 10, 6, 1, 12}
     });
     inputs.add(new Object[]{
-        "array_remove_int(integerArray, 2)", Collections.singletonList("integerArray"), row, new int[]{3, 10, 6, 1, 12}
+        "array_remove_int(integerArray, 2)", List.of("integerArray"), row, new int[]{3, 10, 6, 1, 12}
     });
     inputs.add(new Object[]{
-        "array_remove_string(stringArray, 2)", Collections.singletonList("stringArray"), row,
+        "array_remove_string(stringArray, 2)", List.of("stringArray"), row,
         new String[]{"3", "10", "6", "1", "12"}
     });
 
@@ -182,27 +185,27 @@ public class ArrayFunctionsTest {
         new String[]{"3", "2", "10", "6", "1", "12", "3", "2", "10", "6", "1", "12"}
     });
     inputs.add(new Object[]{
-        "array_push_back_int(intArray, 7)", Collections.singletonList("intArray"), row,
+        "array_push_back_int(intArray, 7)", List.of("intArray"), row,
         new int[]{3, 2, 10, 6, 1, 12, 7}
     });
     inputs.add(new Object[]{
-        "array_push_back_string(stringArray, 'x')", Collections.singletonList("stringArray"), row,
+        "array_push_back_string(stringArray, 'x')", List.of("stringArray"), row,
         new String[]{"3", "2", "10", "6", "1", "12", "x"}
     });
     inputs.add(new Object[]{
-        "array_push_front_int(intArray, 7)", Collections.singletonList("intArray"), row,
+        "array_push_front_int(intArray, 7)", List.of("intArray"), row,
         new int[]{7, 3, 2, 10, 6, 1, 12}
     });
     inputs.add(new Object[]{
-        "array_push_front_string(stringArray, 'x')", Collections.singletonList("stringArray"), row,
+        "array_push_front_string(stringArray, 'x')", List.of("stringArray"), row,
         new String[]{"x", "3", "2", "10", "6", "1", "12"}
     });
     inputs.add(new Object[]{
-        "array_to_string(stringArray, '::')", Collections.singletonList("stringArray"), row,
+        "array_to_string(stringArray, '::')", List.of("stringArray"), row,
         "3::2::10::6::1::12"
     });
     inputs.add(new Object[]{
-        "array_to_string(stringArrayWithNulls, '::', '*')", Collections.singletonList("stringArrayWithNulls"), row,
+        "array_to_string(stringArrayWithNulls, '::', '*')", List.of("stringArrayWithNulls"), row,
         "3::2::10::6::1::12::*::*"
     });
     return inputs.toArray(new Object[0][]);
