@@ -20,7 +20,6 @@ package org.apache.pinot.core.operator.transform.function;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.TimeZone;
@@ -32,7 +31,6 @@ import org.apache.pinot.core.common.BlockValSet;
 import org.apache.pinot.core.operator.ColumnContext;
 import org.apache.pinot.core.operator.blocks.ValueBlock;
 import org.apache.pinot.core.operator.transform.TransformResultMetadata;
-import org.apache.pinot.segment.spi.index.reader.Dictionary;
 import org.apache.pinot.spi.data.DateTimeFieldSpec;
 import org.apache.pinot.spi.data.DateTimeFormatPatternSpec;
 import org.apache.pinot.spi.data.FieldSpec.DataType;
@@ -60,7 +58,7 @@ public class DateTimeConversionTransformFunctionTest extends BaseTransformFuncti
 
   @BeforeTest
   public void setUp()
-  throws Exception {
+      throws Exception {
     super.setUp();
     _expBuffer.hourOfDay().roundFloor();
   }
@@ -813,7 +811,7 @@ public class DateTimeConversionTransformFunctionTest extends BaseTransformFuncti
       args.add(literal(DataType.STRING, bucketingTimeZone));
     }
 
-    function.init(args, Collections.emptyMap());
+    function.init(args, Map.of());
     return function;
   }
 
@@ -920,12 +918,6 @@ public class DateTimeConversionTransformFunctionTest extends BaseTransformFuncti
       return new TransformResultMetadata(DataType.LONG, true, false);
     }
 
-    @Nullable
-    @Override
-    public Dictionary getDictionary() {
-      return null;
-    }
-
     @Override
     public int[] transformToDictIdsSV(ValueBlock valueBlock) {
       return new int[0];
@@ -990,6 +982,11 @@ public class DateTimeConversionTransformFunctionTest extends BaseTransformFuncti
     @Override
     public double[][] transformToDoubleValuesMV(ValueBlock valueBlock) {
       return new double[0][];
+    }
+
+    @Override
+    public BigDecimal[][] transformToBigDecimalValuesMV(ValueBlock valueBlock) {
+      return new BigDecimal[0][];
     }
 
     @Override
@@ -1237,21 +1234,30 @@ public class DateTimeConversionTransformFunctionTest extends BaseTransformFuncti
   @DataProvider(name = "testIllegalArguments")
   public Object[][] testIllegalArguments() {
     return new Object[][]{
-        new Object[]{
+        {
             String.format("dateTimeConvert(%s,'1:MILLISECONDS:EPOCH','1:MINUTES:EPOCH')", TIME_COLUMN)
-        }, new Object[]{"dateTimeConvert(5,'1:MILLISECONDS:EPOCH','1:MINUTES:EPOCH','1:MINUTES')"}, new Object[]{
-        String.format("dateTimeConvert(%s,'1:MILLISECONDS:EPOCH','1:MINUTES:EPOCH','1:MINUTES')", INT_MV_COLUMN)
-    }, new Object[]{
-        String.format("dateTimeConvert(%s,'1:MILLISECONDS:EPOCH','1:MINUTES:EPOCH','MINUTES:1')", TIME_COLUMN)
-    }, new Object[]{
-        String.format("dateTimeConvert(%s,%s,'1:MINUTES:EPOCH','1:MINUTES')", TIME_COLUMN, INT_SV_COLUMN)
-    }, new Object[]{
-        String.format("dateTimeConvert(%s,'1:MINUTES:EPOCH','1:MINUTES:EPOCH','1:MINUTES','aa')", TIME_COLUMN)
-    }, new Object[]{
-        String.format("dateTimeConvert(%s,'1:MINUTES:EPOCH','1:MINUTES:EPOCH','1:MINUTES','')", TIME_COLUMN)
-    }, new Object[]{
-        String.format("dateTimeConvert(%s,'1:MINUTES:EPOCH','1:MINUTES:EPOCH','1:MINUTES',null)", TIME_COLUMN)
-    }
+        },
+        {
+            "dateTimeConvert(5,'1:MILLISECONDS:EPOCH','1:MINUTES:EPOCH','1:MINUTES')"
+        },
+        {
+            String.format("dateTimeConvert(%s,'1:MILLISECONDS:EPOCH','1:MINUTES:EPOCH','1:MINUTES')", INT_MV_COLUMN)
+        },
+        {
+            String.format("dateTimeConvert(%s,'1:MILLISECONDS:EPOCH','1:MINUTES:EPOCH','MINUTES:1')", TIME_COLUMN)
+        },
+        {
+            String.format("dateTimeConvert(%s,%s,'1:MINUTES:EPOCH','1:MINUTES')", TIME_COLUMN, INT_SV_COLUMN)
+        },
+        {
+            String.format("dateTimeConvert(%s,'1:MINUTES:EPOCH','1:MINUTES:EPOCH','1:MINUTES','aa')", TIME_COLUMN)
+        },
+        {
+            String.format("dateTimeConvert(%s,'1:MINUTES:EPOCH','1:MINUTES:EPOCH','1:MINUTES','')", TIME_COLUMN)
+        },
+        {
+            String.format("dateTimeConvert(%s,'1:MINUTES:EPOCH','1:MINUTES:EPOCH','1:MINUTES',null)", TIME_COLUMN)
+        }
     };
   }
 
