@@ -20,8 +20,8 @@ package org.apache.pinot.query.planner.logical;
 
 import com.google.common.collect.ImmutableList;
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.plan.hep.HepPlanner;
@@ -79,6 +79,20 @@ public class RelToPlanNodeConverterTest {
     Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
             new ObjectSqlType(SqlTypeName.BIGINT, SqlIdentifier.STAR, true, null, null)),
         DataSchema.ColumnDataType.LONG);
+    // Unsigned integer types (Calcite 1.41+, CALCITE-1466): the representable ones map to the narrowest signed type
+    // that holds their range (UTINYINT/USMALLINT -> INT, UINTEGER -> LONG); UBIGINT is rejected because no signed type
+    // holds its full 0..2^64-1 range.
+    Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
+            new ObjectSqlType(SqlTypeName.UTINYINT, SqlIdentifier.STAR, true, null, null)),
+        DataSchema.ColumnDataType.INT);
+    Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
+            new ObjectSqlType(SqlTypeName.USMALLINT, SqlIdentifier.STAR, true, null, null)),
+        DataSchema.ColumnDataType.INT);
+    Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
+            new ObjectSqlType(SqlTypeName.UINTEGER, SqlIdentifier.STAR, true, null, null)),
+        DataSchema.ColumnDataType.LONG);
+    Assert.assertThrows(IllegalArgumentException.class, () -> RelToPlanNodeConverter.convertToColumnDataType(
+        new ObjectSqlType(SqlTypeName.UBIGINT, SqlIdentifier.STAR, true, null, null)));
     Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
             new ObjectSqlType(SqlTypeName.FLOAT, SqlIdentifier.STAR, true, null, null)),
         DataSchema.ColumnDataType.FLOAT);
@@ -142,6 +156,12 @@ public class RelToPlanNodeConverterTest {
     Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
             new ArraySqlType(new ObjectSqlType(SqlTypeName.BIGINT, SqlIdentifier.STAR, true, null, null), true)),
         DataSchema.ColumnDataType.LONG_ARRAY);
+    // Unsigned integer types (Calcite 1.41+, CALCITE-1466) map to their signed-equivalent array types.
+    Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
+            new ArraySqlType(new ObjectSqlType(SqlTypeName.UINTEGER, SqlIdentifier.STAR, true, null, null), true)),
+        DataSchema.ColumnDataType.LONG_ARRAY);
+    Assert.assertThrows(IllegalArgumentException.class, () -> RelToPlanNodeConverter.convertToColumnDataType(
+        new ArraySqlType(new ObjectSqlType(SqlTypeName.UBIGINT, SqlIdentifier.STAR, true, null, null), true)));
     Assert.assertEquals(RelToPlanNodeConverter.convertToColumnDataType(
             new ArraySqlType(new ObjectSqlType(SqlTypeName.FLOAT, SqlIdentifier.STAR, true, null, null), true)),
         DataSchema.ColumnDataType.FLOAT_ARRAY);
@@ -185,8 +205,8 @@ public class RelToPlanNodeConverterTest {
     // join condition col0 = col1
     RexNode joinCondition = rexBuilder.makeCall(SqlStdOperatorTable.EQUALS,
         rexBuilder.makeInputRef(intType, 0), rexBuilder.makeInputRef(intType, 3));
-    LogicalJoin originalJoin = LogicalJoin.create(input, input, Collections.emptyList(),
-        joinCondition, Collections.emptySet(), JoinRelType.INNER);
+    LogicalJoin originalJoin = LogicalJoin.create(input, input, List.of(),
+        joinCondition, Set.of(), JoinRelType.INNER);
 
     // filter condition col2 = 1
     RexNode filterCondition = rexBuilder.makeCall(
@@ -197,7 +217,7 @@ public class RelToPlanNodeConverterTest {
     // project above filter
     List<RexNode> projects = List.of(rexBuilder.makeInputRef(intType, 1));
     LogicalProject project = LogicalProject.create(
-        originalFilter, Collections.emptyList(), projects, List.of("projectCol1"));
+        originalFilter, List.of(), projects, List.of("projectCol1"));
 
     planner.setRoot(project);
     PinotLogicalEnrichedJoin enrichedJoin = (PinotLogicalEnrichedJoin) planner.findBestExp();
@@ -327,7 +347,7 @@ public class RelToPlanNodeConverterTest {
     RelDataType stringArrayType = inputRowType.getFieldList().get(1).getType();
     RexNode longArrayRef = new RexInputRef(0, longArrayType);
     RexNode stringArrayRef = new RexInputRef(1, stringArrayType);
-    LogicalProject project = LogicalProject.create(input, Collections.emptyList(),
+    LogicalProject project = LogicalProject.create(input, List.of(),
         List.of(longArrayRef, stringArrayRef), List.of("longArrayCol", "stringArrayCol"));
     // Create Uncollect without ordinality
     Uncollect uncollect = Uncollect.create(project.getTraitSet(), project, false, List.of("longValue", "stringValue"));
@@ -360,7 +380,7 @@ public class RelToPlanNodeConverterTest {
     RelDataType stringArrayType = inputRowType.getFieldList().get(1).getType();
     RexNode longArrayRef = new RexInputRef(0, longArrayType);
     RexNode stringArrayRef = new RexInputRef(1, stringArrayType);
-    LogicalProject project = LogicalProject.create(input, Collections.emptyList(),
+    LogicalProject project = LogicalProject.create(input, List.of(),
         List.of(longArrayRef, stringArrayRef), List.of("longArrayCol", "stringArrayCol"));
     // Create Uncollect with WITH ORDINALITY
     Uncollect uncollect = Uncollect.create(project.getTraitSet(), project, true,
@@ -398,7 +418,7 @@ public class RelToPlanNodeConverterTest {
         rexBuilder.makeFieldAccess(rexBuilder.makeCorrel(leftRowType, correlationId), "longArrayCol", true);
     RexNode stringArrayAccess =
         rexBuilder.makeFieldAccess(rexBuilder.makeCorrel(leftRowType, correlationId), "stringArrayCol", true);
-    LogicalProject project = LogicalProject.create(LogicalValues.createOneRow(cluster), Collections.emptyList(),
+    LogicalProject project = LogicalProject.create(LogicalValues.createOneRow(cluster), List.of(),
         List.of(longArrayAccess, stringArrayAccess), List.of("longArrayCol", "stringArrayCol"));
     Uncollect uncollect = Uncollect.create(project.getTraitSet(), project, false,
         List.of("longValue", "stringValue"));
@@ -441,7 +461,7 @@ public class RelToPlanNodeConverterTest {
         rexBuilder.makeFieldAccess(rexBuilder.makeCorrel(leftRowType, correlationId), "longArrayCol", true);
     RexNode stringArrayAccess =
         rexBuilder.makeFieldAccess(rexBuilder.makeCorrel(leftRowType, correlationId), "stringArrayCol", true);
-    LogicalProject project = LogicalProject.create(LogicalValues.createOneRow(cluster), Collections.emptyList(),
+    LogicalProject project = LogicalProject.create(LogicalValues.createOneRow(cluster), List.of(),
         List.of(longArrayAccess, stringArrayAccess), List.of("longArrayCol", "stringArrayCol"));
     Uncollect uncollect = Uncollect.create(project.getTraitSet(), project, true,
         List.of("longValue", "stringValue"));
@@ -473,7 +493,7 @@ public class RelToPlanNodeConverterTest {
     RexBuilder rexBuilder = cluster.getRexBuilder();
     RexNode fieldAccess =
         rexBuilder.makeFieldAccess(rexBuilder.makeCorrel(leftRowType, correlationId), fieldName, true);
-    return LogicalProject.create(LogicalValues.createOneRow(cluster), Collections.emptyList(),
+    return LogicalProject.create(LogicalValues.createOneRow(cluster), List.of(),
         List.of(fieldAccess), List.of(fieldName));
   }
 }
