@@ -19,10 +19,9 @@
 package org.apache.pinot.server.api;
 
 import java.io.File;
+import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -76,22 +75,18 @@ import static org.testng.Assert.assertTrue;
 
 
 public abstract class BaseResourceTest {
-  protected String getAvroFileName() {
-    return "data/test_data-mv.avro";
-  }
-
-  private static final File TEMP_DIR = new File(FileUtils.getTempDirectory(), "BaseResourceTest");
-  protected static final String TABLE_NAME = "testTable";
+  protected static final File TEMP_DIR = new File(FileUtils.getTempDirectory(), "BaseResourceTest");
+  protected static final String RAW_TABLE_NAME = "testTable";
+  protected static final String REALTIME_TABLE_NAME = TableNameBuilder.REALTIME.tableNameWithType(RAW_TABLE_NAME);
+  protected static final String OFFLINE_TABLE_NAME = TableNameBuilder.OFFLINE.tableNameWithType(RAW_TABLE_NAME);
   protected static final String LLC_SEGMENT_NAME_FOR_UPLOAD_SUCCESS =
-      new LLCSegmentName(TableNameBuilder.REALTIME.tableNameWithType(TABLE_NAME), 1, 0,
-          System.currentTimeMillis()).getSegmentName();
+      new LLCSegmentName(REALTIME_TABLE_NAME, 1, 0, System.currentTimeMillis()).getSegmentName();
   protected static final String LLC_SEGMENT_NAME_FOR_UPLOAD_FAILURE =
-      new LLCSegmentName(TableNameBuilder.REALTIME.tableNameWithType(TABLE_NAME), 2, 0,
-          System.currentTimeMillis()).getSegmentName();
+      new LLCSegmentName(REALTIME_TABLE_NAME, 2, 0, System.currentTimeMillis()).getSegmentName();
   protected static final String SEGMENT_DOWNLOAD_URL =
-      StringUtil.join("/", "hdfs://root", TABLE_NAME, LLC_SEGMENT_NAME_FOR_UPLOAD_SUCCESS);
+      StringUtil.join("/", "hdfs://root", RAW_TABLE_NAME, LLC_SEGMENT_NAME_FOR_UPLOAD_SUCCESS);
 
-  private final Map<String, TableDataManager> _tableDataManagerMap = new HashMap<>();
+  protected final Map<String, TableDataManager> _tableDataManagerMap = new HashMap<>();
   protected final List<ImmutableSegment> _realtimeIndexSegments = new ArrayList<>();
   protected final List<ImmutableSegment> _offlineIndexSegments = new ArrayList<>();
   protected File _avroFile;
@@ -99,6 +94,10 @@ public abstract class BaseResourceTest {
   protected WebTarget _webTarget;
   protected String _instanceId;
   protected ServerInstance _serverInstance;
+
+  protected String getAvroFileName() {
+    return "data/test_data-mv.avro";
+  }
 
   @SuppressWarnings("SuspiciousMethodCalls")
   @BeforeClass
@@ -108,9 +107,15 @@ public abstract class BaseResourceTest {
 
     FileUtils.deleteQuietly(TEMP_DIR);
     assertTrue(TEMP_DIR.mkdirs());
-    URL resourceUrl = getClass().getClassLoader().getResource(getAvroFileName());
-    assertNotNull(resourceUrl);
-    _avroFile = new File(resourceUrl.getFile());
+    // Copy the Avro fixture out of the classpath into TEMP_DIR so it is always backed by a real file.
+    // The fixture may be served from a packaged test-jar when this base class is reused from another
+    // module, in which case it cannot be opened as a plain File via the resource URL.
+    String avroFileName = getAvroFileName();
+    _avroFile = new File(TEMP_DIR, new File(avroFileName).getName());
+    try (InputStream avroStream = getClass().getClassLoader().getResourceAsStream(avroFileName)) {
+      assertNotNull(avroStream);
+      FileUtils.copyInputStreamToFile(avroStream, _avroFile);
+    }
 
     // Mock the instance data manager
     InstanceDataManager instanceDataManager = mock(InstanceDataManager.class);
@@ -142,13 +147,10 @@ public abstract class BaseResourceTest {
     when(instanceDataManager.getSegmentUploader()).thenReturn(segmentUploader);
 
     // Add the default tables and segments.
-    String realtimeTableName = TableNameBuilder.REALTIME.tableNameWithType(TABLE_NAME);
-    String offlineTableName = TableNameBuilder.OFFLINE.tableNameWithType(TABLE_NAME);
-
-    addTable(realtimeTableName);
-    addTable(offlineTableName);
-    setUpSegment(realtimeTableName, null, "default", _realtimeIndexSegments);
-    setUpSegment(offlineTableName, null, "default", _offlineIndexSegments);
+    addTable(REALTIME_TABLE_NAME);
+    addTable(OFFLINE_TABLE_NAME);
+    setUpSegment(REALTIME_TABLE_NAME, null, "default", _realtimeIndexSegments);
+    setUpSegment(OFFLINE_TABLE_NAME, null, "default", _offlineIndexSegments);
 
     PinotConfiguration serverConf = new PinotConfiguration();
     String hostname = serverConf.getProperty(CommonConstants.Helix.KEY_OF_SERVER_NETTY_HOST,
@@ -158,15 +160,19 @@ public abstract class BaseResourceTest {
         CommonConstants.Helix.DEFAULT_SERVER_NETTY_PORT);
     _instanceId = CommonConstants.Helix.PREFIX_OF_SERVER_INSTANCE + hostname + "_" + port;
     serverConf.setProperty(CommonConstants.Server.CONFIG_OF_INSTANCE_ID, _instanceId);
+    configureServerConf(serverConf);
     _adminApiApplication = new AdminApiApplication(_serverInstance, new AllowAllAccessFactory(),
         mock(ServerReloadJobStatusCache.class),
         serverConf);
-    _adminApiApplication.start(Collections.singletonList(
+    _adminApiApplication.start(List.of(
         new ListenerConfig(CommonConstants.HTTP_PROTOCOL, "0.0.0.0", CommonConstants.Server.DEFAULT_ADMIN_API_PORT,
             CommonConstants.HTTP_PROTOCOL, new TlsConfig(), HttpServerThreadPoolConfig.defaultInstance())));
 
     _webTarget = ClientBuilder.newClient().target(
         String.format("http://%s:%d", NetUtils.getHostAddress(), CommonConstants.Server.DEFAULT_ADMIN_API_PORT));
+  }
+
+  protected void configureServerConf(PinotConfiguration serverConf) {
   }
 
   @AfterClass
@@ -188,8 +194,7 @@ public abstract class BaseResourceTest {
       throws Exception {
     List<ImmutableSegment> immutableSegments = new ArrayList<>();
     for (int i = 0; i < numSegments; i++) {
-      immutableSegments.add(
-          setUpSegment(tableNameWithType, null, Integer.toString(_realtimeIndexSegments.size()), segments));
+      immutableSegments.add(setUpSegment(tableNameWithType, null, Integer.toString(segments.size()), segments));
     }
     return immutableSegments;
   }
