@@ -30,6 +30,9 @@ import com.fasterxml.jackson.databind.ObjectWriter;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateSerializer;
+import com.fasterxml.jackson.datatype.jsr310.ser.LocalTimeSerializer;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.MapDifference;
 import com.google.common.collect.Maps;
@@ -40,9 +43,11 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
+import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -79,23 +84,48 @@ public class JsonUtils {
   public static final String SKIPPED_VALUE_REPLACEMENT = "$SKIPPED$";
   public static final int MAX_COMBINATIONS = 100_000;
   public static final List<Map<String, String>> SKIPPED_FLATTENED_RECORD =
-      Collections.singletonList(Collections.singletonMap(VALUE_KEY, SKIPPED_VALUE_REPLACEMENT));
+      List.of(Map.of(VALUE_KEY, SKIPPED_VALUE_REPLACEMENT));
 
   // For querying
   public static final String WILDCARD = "*";
 
 
-  // NOTE: Do not expose the ObjectMapper to prevent configuration change
-  private static final ObjectMapper DEFAULT_MAPPER = new ObjectMapper();
+  // NOTE: Do not expose the ObjectMapper to prevent configuration change.
+  //
+  // JavaTimeModule is registered so the LocalDate / LocalTime values produced by RecordExtractor (per the
+  // contract on org.apache.pinot.spi.data.readers.RecordExtractor) serialize correctly when they reach
+  // Jackson via PinotDataType.toJson. Each java.time type is bound to an explicit ISO-8601 formatter so the
+  // output is independent of SerializationFeature.WRITE_DATES_AS_TIMESTAMPS — the global flag stays at its
+  // default (true), so any java.util.Date / java.sql.Timestamp continues to serialize as numeric epoch
+  // millis (Timestamp.toString is JVM-timezone-dependent JDBC escape format, not ISO-8601, so a string form
+  // would be neither portable nor consistent across paths).
+  // Single shared JSR-310 module instance with ISO-8601 serializers for LocalDate / LocalTime. Safe to
+  // share across ObjectMappers — Jackson copies the module's handlers into each mapper at registration
+  // time, and the serializers themselves are stateless.
+  private static final JavaTimeModule JAVA_TIME_MODULE = buildJavaTimeModule();
+  private static final ObjectMapper DEFAULT_MAPPER = newObjectMapperWithJavaTime();
   public static final ObjectReader DEFAULT_READER = DEFAULT_MAPPER.reader();
   public static final ObjectWriter DEFAULT_WRITER = DEFAULT_MAPPER.writer();
   public static final ObjectWriter DEFAULT_PRETTY_WRITER = DEFAULT_MAPPER.writerWithDefaultPrettyPrinter();
   public static final ObjectReader READER_WITH_BIG_DECIMAL =
-      new ObjectMapper().enable(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS).reader();
+      newObjectMapperWithJavaTime().enable(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS).reader();
 
-  public static final TypeReference<HashMap<String, Object>> MAP_TYPE_REFERENCE =
-      new TypeReference<HashMap<String, Object>>() {
-      };
+  /// Returns a fresh [ObjectMapper] with the JSR-310 [JavaTimeModule] registered (ISO-8601 serializers for
+  /// `LocalDate` / `LocalTime`). Callers needing additional configuration (e.g. sorted map entries) can
+  /// chain `configure(...)` on the returned instance.
+  public static ObjectMapper newObjectMapperWithJavaTime() {
+    return new ObjectMapper().registerModule(JAVA_TIME_MODULE);
+  }
+
+  private static JavaTimeModule buildJavaTimeModule() {
+    JavaTimeModule module = new JavaTimeModule();
+    module.addSerializer(LocalDate.class, new LocalDateSerializer(DateTimeFormatter.ISO_LOCAL_DATE));
+    module.addSerializer(LocalTime.class, new LocalTimeSerializer(DateTimeFormatter.ISO_LOCAL_TIME));
+    return module;
+  }
+
+  public static final TypeReference<HashMap<String, Object>> MAP_TYPE_REFERENCE = new TypeReference<>() {
+  };
 
   public static <T> T stringToObject(String jsonString, Class<T> valueType)
       throws JsonProcessingException {
@@ -155,11 +185,6 @@ public class JsonUtils {
   public static JsonNode stringToJsonNode(String jsonString)
       throws IOException {
     return DEFAULT_READER.readTree(jsonString);
-  }
-
-  public static Map<String, String> jsonNodeToStringMap(JsonNode jsonNode)
-      throws IOException {
-    return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonNode);
   }
 
   public static JsonNode stringToJsonNodeWithBigDecimal(String jsonString)
@@ -247,10 +272,11 @@ public class JsonUtils {
     return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonNode);
   }
 
-  /**
-   * Parses JSON bytes directly to a Map, avoiding the intermediate JsonNode representation.
-   * This is more efficient than calling bytesToJsonNode followed by jsonNodeToMap.
-   */
+  public static Map<String, Object> stringToMap(String jsonString)
+      throws JsonProcessingException {
+    return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonString);
+  }
+
   public static Map<String, Object> bytesToMap(byte[] jsonBytes)
       throws IOException {
     return DEFAULT_READER.forType(MAP_TYPE_REFERENCE).readValue(jsonBytes);
@@ -406,7 +432,7 @@ public class JsonUtils {
       String path, boolean includePathMatched, JsonSchemaTreeNode indexPathNode) {
     // Null
     if (node.isNull() || node.isMissingNode() || indexPathNode == null) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     // Value
@@ -416,7 +442,7 @@ public class JsonUtils {
       if (0 < maxValueLength && maxValueLength < valueAsText.length()) {
         valueAsText = SKIPPED_VALUE_REPLACEMENT;
       }
-      return Collections.singletonList(Collections.singletonMap(VALUE_KEY, valueAsText));
+      return List.of(Map.of(VALUE_KEY, valueAsText));
     }
 
     Preconditions.checkArgument(node.isArray() || node.isObject(), "Unexpected node type: %s", node.getNodeType());
@@ -424,23 +450,23 @@ public class JsonUtils {
     // Do not flatten further for array and object when max level reached
     int maxLevels = jsonIndexConfig.getMaxLevels();
     if (maxLevels > 0 && level == maxLevels) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     // Array
     if (node.isArray()) {
       if (jsonIndexConfig.isExcludeArray()) {
-        return Collections.emptyList();
+        return List.of();
       }
       int numChildren = node.size();
       if (numChildren == 0) {
-        return Collections.emptyList();
+        return List.of();
       }
       String childPath = path + ARRAY_PATH;
       IncludeResult includeResult =
           includePathMatched ? IncludeResult.MATCH : shouldInclude(jsonIndexConfig, childPath);
       if (!includeResult._shouldInclude) {
-        return Collections.emptyList();
+        return List.of();
       }
       List<Map<String, String>> results = new ArrayList<>(numChildren);
       for (int i = 0; i < numChildren; i++) {
@@ -518,9 +544,9 @@ public class JsonUtils {
     int nestedResultsListSize = nestedResultsList.size();
     if (nestedResultsListSize == 0) {
       if (nonNestedResult.isEmpty()) {
-        return Collections.emptyList();
+        return List.of();
       } else {
-        return Collections.singletonList(nonNestedResult);
+        return List.of(nonNestedResult);
       }
     }
     if (nestedResultsListSize == 1) {
