@@ -23,8 +23,8 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.sql.Timestamp;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import org.apache.pinot.spi.data.TimeGranularitySpec.TimeFormat;
 import org.apache.pinot.spi.utils.BytesUtils;
@@ -695,7 +695,7 @@ public class SchemaTest {
 
     Schema withoutVirtualColumns = schema.withoutVirtualColumns();
 
-    Assert.assertEquals(withoutVirtualColumns.getPrimaryKeyColumns(), Collections.singletonList("metric"),
+    Assert.assertEquals(withoutVirtualColumns.getPrimaryKeyColumns(), List.of("metric"),
         "Unexpected primary key columns");
   }
 
@@ -794,5 +794,20 @@ public class SchemaTest {
     Schema withoutVirtual = schema.withoutVirtualColumns();
     assertThat(withoutVirtual.getDescription()).isEqualTo("my description");
     assertThat(withoutVirtual.getTags()).isEqualTo(List.of("tag1"));
+  }
+
+  @Test
+  public void schemaBuilderAddOpenStruct() {
+    Schema schema = new Schema.SchemaBuilder()
+        .setSchemaName("test")
+        .addOpenStruct("attrs",
+            Map.of("count", new DimensionFieldSpec("count", FieldSpec.DataType.INT, true)))
+        .build();
+
+    FieldSpec fs = schema.getFieldSpecFor("attrs");
+    Assert.assertNotNull(fs);
+    Assert.assertEquals(fs.getDataType(), FieldSpec.DataType.OPEN_STRUCT);
+    ComplexFieldSpec cfs = (ComplexFieldSpec) fs;
+    Assert.assertEquals(cfs.getChildFieldSpec("count").getDataType(), FieldSpec.DataType.INT);
   }
 }
