@@ -23,12 +23,15 @@ import com.google.common.collect.ImmutableSet;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.sql.Timestamp;
+import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.pinot.spi.config.table.JsonIndexConfig;
@@ -60,7 +63,7 @@ public class JsonUtilsTest {
       JsonNode jsonNode = JsonUtils.stringToJsonNode("123");
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 1);
-      assertEquals(flattenedRecords.get(0), Collections.singletonMap("", "123"));
+      assertEquals(flattenedRecords.get(0), Map.of("", "123"));
     }
     {
       JsonNode jsonNode = JsonUtils.stringToJsonNode("[]");
@@ -359,7 +362,7 @@ public class JsonUtilsTest {
       jsonIndexConfig.setMaxLevels(2);
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 1);
-      assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "adam"));
+      assertEquals(flattenedRecords.get(0), Map.of(".name", "adam"));
 
       jsonIndexConfig.setMaxLevels(1);
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
@@ -439,12 +442,12 @@ public class JsonUtilsTest {
             + "\"office\"]}," + "{\"country\":\"ca\",\"street\":\"second st\"}]}");
 
     JsonIndexConfig jsonIndexConfig = new JsonIndexConfig();
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.name"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.name"));
     List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.addresses"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.addresses"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 3);
     Map<String, String> flattenedRecord0 = flattenedRecords.get(0);
@@ -467,10 +470,10 @@ public class JsonUtilsTest {
     assertEquals(flattenedRecord2.get(".addresses..country"), "ca");
     assertEquals(flattenedRecord2.get(".addresses..street"), "second st");
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.addresses[*]"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.addresses[*]"));
     assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.addresses[*].types"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.addresses[*].types"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 2);
     flattenedRecord0 = flattenedRecords.get(0);
@@ -500,7 +503,7 @@ public class JsonUtilsTest {
     assertEquals(flattenedRecord1.get(".addresses..types.$index"), "1");
     assertEquals(flattenedRecord1.get(".addresses..types."), "office");
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.no_match"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.no_match"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertTrue(flattenedRecords.isEmpty());
   }
@@ -516,10 +519,10 @@ public class JsonUtilsTest {
     jsonIndexConfig.setExcludeArray(true);
     List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
     jsonIndexConfig = new JsonIndexConfig();
-    jsonIndexConfig.setExcludePaths(Collections.singleton("$.name"));
+    jsonIndexConfig.setExcludePaths(Set.of("$.name"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 3);
     Map<String, String> flattenedRecord0 = flattenedRecords.get(0);
@@ -542,21 +545,21 @@ public class JsonUtilsTest {
     assertEquals(flattenedRecord2.get(".addresses..country"), "ca");
     assertEquals(flattenedRecord2.get(".addresses..street"), "second st");
 
-    jsonIndexConfig.setExcludePaths(Collections.singleton("$.addresses"));
+    jsonIndexConfig.setExcludePaths(Set.of("$.addresses"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
-    jsonIndexConfig.setExcludePaths(Collections.singleton("$.addresses[*]"));
+    jsonIndexConfig.setExcludePaths(Set.of("$.addresses[*]"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
     jsonIndexConfig = new JsonIndexConfig();
-    jsonIndexConfig.setExcludeFields(Collections.singleton("addresses"));
+    jsonIndexConfig.setExcludeFields(Set.of("addresses"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
   }
 
   @Test
@@ -596,7 +599,7 @@ public class JsonUtilsTest {
 
     // unnest collection entries
     inferredPinotSchema =
-        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, Collections.singletonList("entries"),
+        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, List.of("entries"),
             ".", ComplexTypeConfig.CollectionNotUnnestedToJson.NON_PRIMITIVE);
     expectedSchema = new Schema.SchemaBuilder().addSingleValueDimension("d1", FieldSpec.DataType.STRING)
         .addMetric("m1", FieldSpec.DataType.INT)
@@ -610,7 +613,7 @@ public class JsonUtilsTest {
 
     // change delimiter
     inferredPinotSchema =
-        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, Collections.singletonList(""), "_",
+        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, List.of(""), "_",
             ComplexTypeConfig.CollectionNotUnnestedToJson.NON_PRIMITIVE);
     expectedSchema = new Schema.SchemaBuilder().addSingleValueDimension("d1", FieldSpec.DataType.STRING)
         .addMetric("m1", FieldSpec.DataType.INT)
@@ -623,7 +626,7 @@ public class JsonUtilsTest {
 
     // change the handling of collection-to-json option, d2 will become string
     inferredPinotSchema =
-        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, Collections.singletonList("entries"),
+        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, List.of("entries"),
             ".", ComplexTypeConfig.CollectionNotUnnestedToJson.ALL);
     expectedSchema = new Schema.SchemaBuilder().addSingleValueDimension("d1", FieldSpec.DataType.STRING)
         .addMetric("m1", FieldSpec.DataType.INT)
@@ -670,11 +673,11 @@ public class JsonUtilsTest {
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
 
       // flatten everything within 2 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten "a." prefix till 2 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("a.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("a.*"));
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertTrue(flattenedRecords.isEmpty());
     }
@@ -703,11 +706,11 @@ public class JsonUtilsTest {
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
 
       // flatten everything
-      jsonIndexConfig.setIndexPaths(Collections.singleton("**"));
+      jsonIndexConfig.setIndexPaths(Set.of("**"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten everything within 3 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*.*"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten "name" 1 layer and "addresses" infinite layers
@@ -715,13 +718,13 @@ public class JsonUtilsTest {
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten everything within 2 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*"));
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 1);
-      assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "adam"));
+      assertEquals(flattenedRecords.get(0), Map.of(".name", "adam"));
 
       // flatten "name." prefix with infinite layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("name.**"));
+      jsonIndexConfig.setIndexPaths(Set.of("name.**"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
     }
     {
@@ -748,11 +751,11 @@ public class JsonUtilsTest {
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
 
       // flatten everything
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*.**"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*.**"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten addresses array with one more layer
-      jsonIndexConfig.setIndexPaths(Collections.singleton("addresses..*"));
+      jsonIndexConfig.setIndexPaths(Set.of("addresses..*"));
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 2);
       Map<String, String> flattenedRecord0 = flattenedRecords.get(0);
@@ -1258,5 +1261,46 @@ public class JsonUtilsTest {
     JsonNode jsonNode = JsonUtils.bytesToJsonNode(jsonBytes);
     Map<String, Object> oldResult = JsonUtils.jsonNodeToMap(jsonNode);
     assertEquals(result, oldResult);
+  }
+
+  // === JSR-310 type serialization — RecordExtractor outputs LocalDate / LocalTime per the contract on
+  // org.apache.pinot.spi.data.readers.RecordExtractor; objectToString must serialize them as ISO-8601
+  // strings. java.sql.Timestamp continues to serialize as epoch millis (Jackson default for Date subclasses
+  // with WRITE_DATES_AS_TIMESTAMPS=true). ===
+
+  @Test
+  public void testObjectToStringSerializesLocalDateAsIsoString()
+      throws IOException {
+    assertEquals(JsonUtils.objectToString(LocalDate.of(2022, 2, 8)), "\"2022-02-08\"");
+  }
+
+  @Test
+  public void testObjectToStringSerializesLocalTimeAsIsoString()
+      throws IOException {
+    assertEquals(JsonUtils.objectToString(LocalTime.of(12, 34, 56)), "\"12:34:56\"");
+  }
+
+  @Test
+  public void testObjectToStringSerializesTimestampAsEpochMillis()
+      throws IOException {
+    // Timestamp serializes as numeric epoch millis (Jackson default with WRITE_DATES_AS_TIMESTAMPS=true).
+    // RecordExtractor outputs Timestamp directly per its contract.
+    Timestamp ts = new Timestamp(1644278400000L);
+    assertEquals(JsonUtils.objectToString(ts), "1644278400000");
+  }
+
+  @Test
+  public void testObjectToStringSerializesMapContainingLocalDate()
+      throws IOException {
+    // Nested case: ResultSet STRUCT or schema-promoted attribute can wrap LocalDate inside a Map.
+    String json = JsonUtils.objectToString(Map.of("d", LocalDate.of(2022, 2, 8)));
+    assertEquals(json, "{\"d\":\"2022-02-08\"}");
+  }
+
+  @Test
+  public void testObjectToStringSerializesListContainingLocalDate()
+      throws IOException {
+    String json = JsonUtils.objectToString(List.of(LocalDate.of(2022, 2, 8), LocalDate.of(2022, 2, 9)));
+    assertEquals(json, "[\"2022-02-08\",\"2022-02-09\"]");
   }
 }
